--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -93,6 +93,14 @@
                         </li>
 
                         <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logística<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Erp/Motorista">Motoristas</a></li>
+                                <li><a href="/Erp/Logistica">Agendamento de serviço</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configurações<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/Erp/Configuracoes">Configurações do sistema</a></li>
@@ -101,6 +109,7 @@
                                 <li><a href="/Erp/SistemaTela">Telas do sistema</a></li>
                             </ul>
                         </li>
+
                     </ul>
 
                     <ul class="nav navbar-nav pull-right">
