--- a/Cap.Web/Areas/Erp/Views/SistemaTela/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaTela/Create.cshtml
@@ -68,7 +68,7 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="button" value="Incluir" class="btn btn-default tela-create" />
+                            <input type="button" value="Incluir" class="btn btn-primary tela-create" />
                         </div>
                     </div>
                 </div>
