--- a/Cap.Web/Areas/Erp/Views/SistemaTela/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaTela/Edit.cshtml
@@ -79,7 +79,7 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="button" value="Gravar" class="btn btn-default tela-save" />
+                            <input type="button" value="Gravar" class="btn btn-primary tela-save" />
                         </div>
                     </div>
                 </div>
