--- a/Cap.Web/Areas/Erp/Views/Acesso/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Acesso/Index.cshtml
@@ -50,7 +50,7 @@
 
     <div class="form-group">
         <div class="col-md-12">
-            <input type="submit" value="Gravar" class="btn btn-default" />
+            <input type="submit" value="Gravar" class="btn btn-primary" />
         </div>
     </div>
 }
