--- a/Cap.Web/Areas/Erp/Views/Fornecedor/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Fornecedor/Create.cshtml
@@ -2,18 +2,16 @@
 @model Cap.Web.Areas.Erp.Models.FornecedorModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Fornecedor";
 }
 
-<h2>Create</h2>
+<h2>Fornecedor - Inclusão</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>FornecedorModel</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.IdEmpresa)
         @Html.HiddenFor(model => model.AlteradoPor)
