--- a/Cap.Web/Areas/Erp/Views/TelaRegra/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/TelaRegra/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Regras da tela";
 }
 
-<h2>Regras das tela</h2>
+<h2>Regras da tela</h2>
 
 @using (Html.BeginForm())
 {
@@ -12,9 +12,9 @@
     @Html.ValidationSummary(true, "", new { @class= "text-danger" })
     @Html.Hidden("IdTela", ((int)ViewBag.IdTela).ToString())
 
-    <h4>Regras da tela @ViewBag.Tela</h4>
+    <h4 class="top20">@ViewBag.Tela</h4>
 
-    <table class="table">
+    <table class="table table-condensed table-striped top20">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.IdRegra)
@@ -41,8 +41,8 @@
     </table>
 
     <div class="form-group">
-        <div class="col-md-offset-2" col-md-10">
-            <input type="submit" value="Gravar" class="btn btn-default" />
+        <div class="col-md-10">
+            <input type="submit" value="Gravar" class="btn btn-primary" />
         </div>
     </div>
 }
