--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -73,6 +73,16 @@
                         </li>
 
                         <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Requisições<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Erp/Requisicao">Requisições</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/Erp/GrupoCotacao">Grupos de cotações</a></li>
+                                <li><a href="/Erp/CotarCom">Cotar com fornecedores</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Débitos<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/Erp/Pedido/Create">Novo agendamento</a></li>
