--- a/Cap.Web/Areas/Erp/Views/ReqMaterial/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/ReqMaterial/Index.cshtml
@@ -55,7 +55,7 @@
 @if (Model.Count() > 0)
 {
     <input type="button" value="Excluir requisição" data-id="@ViewBag.IdRequisicao" id="delete-requisicao" class="btn btn-danger" />
-    <input type="button" value="Enviar requisição" data-id="@ViewBag.IdRequisicao" id="send-requisicao" class="btn btn-primary" />
+    <input type="button" value="Finalizar requisição" data-id="@ViewBag.IdRequisicao" id="send-requisicao" class="btn btn-primary" />
 }
 
 <script type="text/javascript">
@@ -90,7 +90,7 @@
 
     $('#send-requisicao').click(function () {
         var id = $(this).attr('data-id');
-        $('#modal').load('/Erp/Requisicao/Send/' + id, function () {
+        $('#modal').load('/Erp/Requisicao/FinishEdit/' + id, function () {
             $('#modal').modal('show');
         });
     });
