--- a/Cap.Web/Areas/Erp/Views/Requisicao/FinishEdit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/FinishEdit.cshtml
@@ -1,22 +1,29 @@
 ﻿@Model int
 
-<div class="modal-dialog">
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-            <h4 class="modal-title">Enviar requisição</h4>
-        </div>
-        <div class="modal-body">
-            <h4>Confirma o envio desta requisição ao departamento de compras?</h4>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default close-modal" data-dismiss="modal">Fechar</button>
-            <button type="button" id="confirma-envio" data-id="@Model" class="btn btn-primary">Enviar</button>
+@using (Html.BeginForm("PreSend", "Requisicao"))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.Hidden("Id", ((int)Model).ToString())
+
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">Enviar requisição</h4>
+            </div>
+            <div class="modal-body">
+                <h4>Confirma o envio desta requisição ao departamento de compras?</h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default close-modal" data-dismiss="modal">Fechar</button>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
         </div>
     </div>
-</div>
+}
 
-<script type="text/javascript">
+@*<script type="text/javascript">
 
     $('#confirma-envio').click(function () {
         var id = $(this).attr('data-id');
@@ -28,6 +35,7 @@
                 if (result.success == true) {
                     $('#modal').modal('hide');
                     location.href = '/Erp/Requisicao/Send/' + id;
+                    window.location.href='/Erp/Requisicao/Send'
                 } else {
                     $('#modal').html(result);
                 }
@@ -37,4 +45,4 @@
             }
         });
     });
-</script>
+</script>*@
