--- a/Cap.Web/Areas/Erp/Views/Requisicao/Send.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Send.cshtml
@@ -76,7 +76,7 @@
                 <div class="panel panel-heading">Imprimir cotação</div>
                 <div class="panel-body">
                     @{
-                        Html.RenderAction("Imprimir", "CotarCom", new { id = Model.Id });
+                        Html.RenderAction("Imprimir", "Requisicao", new { id = Model.Id });
                     }
                 </div>
             </div>
